--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               <h3 class="h3-items" id="2025">2025</h3>   
               <div>
                 <div class="wrapper">
-                  <div class="user-card">
+                  <div class="user-card news-card">
                    <ul>
                       <li>[Dec.] Congratulations! <b> Jae-Geon Lee</b> has been awarded <b>IEEE Seoul Section Student Paper Bronze Award.</b> </li>                    
                       <li>[Dec.] Congratulations! <b>Dong-Ho Kim</b> has been awarded <b>IEEE Seoul Section Student Paper Bronze Award.</b> </li>                    
@@ -337,7 +337,7 @@
               <h3 class="h3-items" id="2024">2024</h3>   
               <div>
                 <div class="wrapper">
-                  <div class="user-card">
+                  <div class="user-card news-card">
                     <ul>
                     <li>[Nov.] Our research on <b>A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-I (TCAS-I)</b></u>!
                         <a href="https://ieeexplore.ieee.org/document/10586762" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
@@ -361,7 +361,7 @@
               <h3 class="h3-items" id="2023">2023</h3>   
               <div>
                 <div class="wrapper">
-                  <div class="user-card">
+                  <div class="user-card news-card">
                     <ul>
                       <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> have been awarded <b>IEEE CASS Student Design Contest award!</b></li>
                       <li>[Otc.] <b>Prof. Choo</b> has served as the Technical Program Committee (TPC) at 2023 ISOCC</li>
@@ -375,7 +375,7 @@
               <h3 class="h3-items" id="2022">2022</h3>   
               <div>
                 <div class="wrapper">
-                  <div class="user-card">
+                  <div class="user-card news-card">
                       <ul>
                         <li>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</li>
                       </ul>
