--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 <div class="wrapper">
                   <div class="user-card news-card">
                     <ul>
-                      <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> have been awarded <b>IEEE CASS Student Design Contest award!</b></li>
+                      <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> have been awarded <b>IEEE CAS Student Design Contest award!</b></li>
                       <li>[Otc.] <b>Prof. Choo</b> has served as the Technical Program Committee (TPC) at 2023 ISOCC</li>
                     </ul>
                   </div>
@@ -454,7 +454,7 @@
               <a
                 href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer"
               >
-                "ERICA 전자공학부 추민성 교수 연구팀, 반도체 설계대전 수상"</a
+                "전자공학부 추민성 교수 연구팀, 반도체 설계대전 수상"</a
               >
             </h5>
 
@@ -462,7 +462,7 @@
               <a
                 href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" 
               >
-                "추민성 교수, '반도체의 날' 기념식서 한국 반도체협회장상 수상"</a
+                "추민성 교수, ''반도체의 날'' 기념식서 반도체협회장상 수상"</a
               >
             </h5>
 
@@ -478,7 +478,7 @@
               <a
                 href="https://www.newshyu.com/news/articleView.html?idxno=1017521" target="_blank" rel="noopener noreferrer"
               >
-                "이재건 학생, 국제 메이저 학술대회 ASSCC ‘24에 논문 개제"</a
+                "이재건 학생, 국제 메이저 학술대회 ASSCC''24에 논문 게재"</a
               >
             </h5>
 
@@ -494,8 +494,8 @@
               <a
                 href="https://www.youtube.com/watch?v=8XNEn5FGGIY&ab_channel=%EB%8C%80%ED%95%9C%EC%A0%84%EC%9E%90%EA%B3%B5%ED%95%99%ED%9A%8CIEIE-%EA%B3%B5%EC%8B%9D%EC%B1%84%EB%84%90" target="_blank" rel="noopener noreferrer"
               >
-                "대한전자공학회 ICT 백과사전 - 통신용 회로 및 시스템 (한양대학교
-                추민성 교수)"</a
+                "대한전자공학회 ICT 백과사전 - 통신용 회로 및 시스템 
+                (한양대학교 추민성 교수)"</a
               >
             </h5>
             <div class="iframe-container">
