--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
               <a
                 href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" 
               >
-                "추민성 교수, ''반도체의 날'' 기념식서 반도체협회장상 수상"</a
+                "추민성 교수, '반도체의 날' 기념식서 반도체협회장상 수상"</a
               >
             </h5>
 
@@ -494,7 +494,7 @@
               <a
                 href="https://www.newshyu.com/news/articleView.html?idxno=1017521" target="_blank" rel="noopener noreferrer"
               >
-                "이재건 학생, 국제 메이저 학술대회 ASSCC''24에 논문 게재"</a
+                "이재건 학생, 국제 메이저 학술대회 IEEE ASSCC'24에 논문 게재"</a
               >
             </h5>
 
