--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               <h3 class="h3-items" id="2025">2025</h3>   
               <div>
                 <div class="wrapper">
-                  <div class="user-card news-card">
+                  <!--<div class="user-card news-card"> -->
                    <ul>
                       <li>[Dec.] Congratulations! <b> Jae-Geon Lee</b> has been awarded <b>IEEE Seoul Section Student Paper Bronze Award.</b> </li>                    
                       <li>[Dec.] Congratulations! <b>Dong-Ho Kim</b> has been awarded <b>IEEE Seoul Section Student Paper Bronze Award.</b> </li>                    
