--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
               <h3 class="h3-items" id="2025">2025</h3>   
               <div>
                 <div class="wrapper">
-                  <!--<div class="user-card news-card"> -->
+                  <div class="user-card news-card">
                    <ul>
-                      <li>[2025.12] [Award] <b>IEEE Seoul Section Student Paper Bronze Award -</b> <b> Jae-Geon Lee</b> </li>                    
+                      <li>[2025.12] <b>[Award]</b> IEEE Seoul Section Student Paper Bronze Award: <b> Jae-Geon Lee</b> </li>                    
                       <li>[Dec.] Congratulations! <b>Dong-Ho Kim</b> has been awarded <b>IEEE Seoul Section Student Paper Bronze Award.</b> </li>                    
                       <li>[Dec.] <b>Seung-Hwan Gong</b> has been awarded <b>IEEE Seoul Section Student Paper Bronze Award.</b> Congrat!</li>
                       <li>[Dec.] <b>Prof. Choo</b> has been awarded the <b>IEIE Semiconductor Society Meritorious Service Award, 대한전자공학회 반도체소사이어티 공로상</b>. Congrat!</li>
