--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
                 <div class="wrapper">
                   <div class="user-card news-card">
                    <ul>
-                      <li>[2025.12] <b>[Award]</b> IEEE Seoul Section Student Paper Bronze Award: Congratulations, <b>Jae-Geon</b> </li>                    
-                      <li>[Dec.] Congratulations! <b>Dong-Ho Kim</b> has been awarded <b>IEEE Seoul Section Student Paper Bronze Award.</b> </li>                    
-                      <li>[Dec.] <b>Seung-Hwan Gong</b> has been awarded <b>IEEE Seoul Section Student Paper Bronze Award.</b> Congrat!</li>
+                      <li>[2025.12] <b>[Award]</b> IEEE Seoul Section Student Paper-Bronze Award, Congratulations, <b>Jae-Geon.</b> </li>                    
+                      <li>[2025.12] <b>[Award]</b> IEEE Seoul Section Student Paper-Bronze Award, Congratulations, <b>Dong-Ho.</b> </li>                    
+                      <li>[2025.12] <b>[Award]</b> IEEE Seoul Section Student Paper-Bronze Award, Congratulations, <b>Seung-Hwan.</b> </li>                    
                       <li>[Dec.] <b>Prof. Choo</b> has been awarded the <b>IEIE Semiconductor Society Meritorious Service Award, 대한전자공학회 반도체소사이어티 공로상</b>. Congrat!</li>
                       <li>[Dec.] <b>Prof. Choo</b> has been awarded the <b>IEIE Meritorious Service Award, 대한전자공학회 공로상</b>. Congrat!</li>
                       <li>[Nov.] <b>Prof. Choo</b> has served as an <b>Organizing Committee member</b> of the <b>IEIE Annual Fall Conference</b>.</li>
