--- a/index.html
+++ b/index.html
@@ -299,17 +299,17 @@
                 <div class="wrapper">
                   <div class="user-card news-card">
                    <ul>
-                      <li>[2025.12] <b>[Award]</b> IEEE Seoul Section Student Paper-Bronze Award, Congratulations, <b>Jae-Geon.</b> </li>                    
-                      <li>[2025.12] <b>[Award]</b> IEEE Seoul Section Student Paper-Bronze Award, Congratulations, <b>Dong-Ho.</b> </li>                    
-                      <li>[2025.12] <b>[Award]</b> IEEE Seoul Section Student Paper-Bronze Award, Congratulations, <b>Seung-Hwan.</b> </li>                    
-                      <li>[Dec.] <b>Prof. Choo</b> has been awarded the <b>IEIE Semiconductor Society Meritorious Service Award, 대한전자공학회 반도체소사이어티 공로상</b>. Congrat!</li>
-                      <li>[Dec.] <b>Prof. Choo</b> has been awarded the <b>IEIE Meritorious Service Award, 대한전자공학회 공로상</b>. Congrat!</li>
-                      <li>[Nov.] <b>Prof. Choo</b> has served as an <b>Organizing Committee member</b> of the <b>IEIE Annual Fall Conference</b>.</li>
-                      <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "High-Speed Interface Circuit Design" at the University of Seoul</li>
-                      <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "Analog Modeling" at LX Semicon with <b>Seung-Hwan Gong, Jae-Geon Lee, Seung-Mo Jin, and Dong-Ho Kim</b></li>
-                      <li>[Nov.] <b>Prof. Choo</b> has delivered a lecture on "DSP-based Wireline Communication" at Korea University</li>
-                      <li>[Oct.] We hosted an invited seminar by <b>Prof. Seung-Hyeon Moon</b> on "Two Challenges in AI Accelerators"</li>
-                      <li>[Oct.] <b>Prof. Choo</b> has served as the Organizing Committee at 2025 ICCE-ASIA</li>
+                      <li>[2025.12] <b>[Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Jae-Geon.</b> </li>                    
+                      <li>[2025.12] <b>[Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Dong-Ho.</b> </li>                    
+                      <li>[2025.12] <b>[Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Seung-Hwan.</b> </li>                    
+                      <li>[2025.12] <b>[Award]</b> 공로상, 대한전자공학회 반도체소사이어티</b>, Congratulations, <b>Min-Seong.</b></li>
+                      <li>[2025.12] <b>[Award]</b> 공로상, 대한전자공학회</b>, Congratulations, <b>Min-Seong.</b></li>
+                      <li>[2025.11] <b>[OC Member]</b> 조직위원, 대한전자공학회 2024년도 추계학술대회</b>.</li>
+                      <li>[2025.11] <b>[Invited Talk]</b> "High-Speed Interface Circuit Design", University of Seoul.</li>
+                      <li>[2025.11] <b>[Invited Talk]</b> "Analog Modeling", LX Semicon, <b>Seung-Hwan, Jae-Geon, Seung-Mo, Dong-Ho, Min-Seong.</b></li>
+                      <li>[2025.11] <b>[Invited Talk]</b> "DSP-based Wireline Communication", Korea University, hosted by Prof. Chulwoo Kim.</li>
+                      <li>[2025.10] <b>[Invited Talk]</b> "Two Challenges in AI Accelerators", <b>Prof. Seung-Hyeon Moon</b>, hosted by HPIC Lab.</li>
+                      <li>[2025.10] <b>[OC Member]</b> Special Session Organizing Co-Chair, IEEE/IEIE ICCE-ASIA 2025.</li>
                       <li>[Oct.] <b>Prof. Choo</b> has been selected as a recipient of the <b>Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, 한국반도체산업협회장상</b> at the Semiconductor Day 2025. Congrat! 
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li>[Oct.] <b>Jae-Hyeon Pyeon</b> has been awarded <b>ISOCC 2025 Chip Design Contest Best Poster Award.</b> Congrat!</li>
