--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
                 <div class="wrapper">
                   <div class="user-card news-card">
                    <ul>
-                      <li>[2025.12] <b>[Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Jae-Geon.</b> </li>                    
+                      <li>[2025.12] <b>[Award]</b> <b>Jae-Geon</b>, "Best Student Paper (Bronze Award)", IEEE Seoul Section. </li>                    
                       <li>[2025.12] <b>[Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Dong-Ho.</b> </li>                    
                       <li>[2025.12] <b>[Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Seung-Hwan.</b> </li>                    
                       <li>[2025.12] <b>[Award]</b> 공로상, 대한전자공학회 반도체소사이어티</b>, Congratulations, <b>Min-Seong.</b></li>
-                      <li>[2025.12] <b>[Award]</b> 공로상, 대한전자공학회</b>, Congratulations, <b>Min-Seong.</b></li>
-                      <li>[2025.11] <b>[OC Member]</b> 조직위원, 대한전자공학회 2024년도 추계학술대회</b>.</li>
-                      <li>[2025.11] <b>[Invited Talk]</b> "High-Speed Interface Circuit Design", University of Seoul.</li>
+                      <li>[2025.12] <b>[Award]</b> 공로상, 대한전자공학회</b>, Congratulations, <b>Min-Seong</b>.</li>
+                      <li>[2025.11] <b>[OC Member]</b> 조직위원, 대한전자공학회 2024년도 추계학술대회, <b>Min-Seong</b>.</li>
+                      <li>[2025.11] <b>[Invited Talk]</b> "High-Speed Interface Circuit Design", University of Seoul, <b>Min-Seong</b>.</li>
                       <li>[2025.11] <b>[Invited Talk]</b> "Analog Modeling", LX Semicon, <b>Seung-Hwan, Jae-Geon, Seung-Mo, Dong-Ho, Min-Seong.</b></li>
                       <li>[2025.11] <b>[Invited Talk]</b> "DSP-based Wireline Communication", Korea University, hosted by Prof. Chulwoo Kim.</li>
                       <li>[2025.10] <b>[Invited Talk]</b> "Two Challenges in AI Accelerators", <b>Prof. Seung-Hyeon Moon</b>, hosted by HPIC Lab.</li>
