--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <div class="wrapper">
                   <div class="user-card news-card">
                    <ul>
-                      <li>[2025.12] <b>[Award]</b> <b>Jae-Geon</b>, "Best Student Paper (Bronze Award)", IEEE Seoul Section. </li>                    
+                      <li>[2025.12] <b>[Award]</b> <u><b>Jae-Geon Lee</b></u>, "Best Student Paper (Bronze Award)", IEEE Seoul Section. </li>                    
                       <li>[2025.12] <b>[Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Dong-Ho.</b> </li>                    
                       <li>[2025.12] <b>[Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Seung-Hwan.</b> </li>                    
                       <li>[2025.12] <b>[Award]</b> 공로상, 대한전자공학회 반도체소사이어티</b>, Congratulations, <b>Min-Seong.</b></li>
