--- a/index.html
+++ b/index.html
@@ -300,45 +300,45 @@
                   <div class="user-card news-card">
                    <ul>
                       <li><b>[2025.12]</b> </li>
-                      <li><b>•[Award]</b> 공로상, 대한전자공학회 반도체소사이어티</b>, Congratulations, <b>Min-Seong.</b></li>
-                      <li><b>•[Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Jae-Geon.</b></li>                    
-                      <li><b>•[Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Dong-Ho.</b> </li>                    
-                      <li><b>•[Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Seung-Hwan.</b> </li>                    
-                      <li><b>•[Award]</b> 공로상, 대한전자공학회 반도체소사이어티</b>, Congratulations, <b>Min-Seong.</b></li>
+                      <li><b>•  [Award]</b> 공로상, 대한전자공학회 반도체소사이어티</b>, Congratulations, <b>Min-Seong.</b></li>
+                      <li><b>•  [Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Jae-Geon.</b></li>                    
+                      <li><b>•  [Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Dong-Ho.</b> </li>                    
+                      <li><b>•  [Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Seung-Hwan.</b> </li>                    
+                      <li><b>•  [Award]</b> 공로상, 대한전자공학회 반도체소사이어티</b>, Congratulations, <b>Min-Seong.</b></li>
                       <li><b>[2025.11]</b> </li>                      
-                      <li><b>•[Award]</b> 공로상, 대한전자공학회</b>, Congratulations, <b>Min-Seong</b>.</li>
-                      <li><b>•[OC Member]</b> 조직위원, 대한전자공학회 2024년도 추계학술대회, <b>Min-Seong</b>.</li>
-                      <li><b>•[Invited Talk]</b> "High-Speed Interface Circuit Design", University of Seoul, <b>Min-Seong</b>.</li>
-                      <li><b>•[Invited Talk]</b> "Analog Modeling", LX Semicon, <b>Seung-Hwan, Jae-Geon, Seung-Mo, Dong-Ho, Min-Seong.</b></li>
-                      <li><b>•[Invited Talk]</b> "DSP-based Wireline Communication", Korea University, hosted by Prof. Chulwoo Kim.</li>
+                      <li><b>•  [Award]</b> 공로상, 대한전자공학회</b>, Congratulations, <b>Min-Seong</b>.</li>
+                      <li><b>•  [OC Member]</b> 조직위원, 대한전자공학회 2024년도 추계학술대회, <b>Min-Seong</b>.</li>
+                      <li><b>•  [Invited Talk]</b> "High-Speed Interface Circuit Design", University of Seoul, <b>Min-Seong</b>.</li>
+                      <li><b>•  [Invited Talk]</b> "Analog Modeling", LX Semicon, <b>Seung-Hwan, Jae-Geon, Seung-Mo, Dong-Ho, Min-Seong.</b></li>
+                      <li><b>•  [Invited Talk]</b> "DSP-based Wireline Communication", Korea University, hosted by Prof. Chulwoo Kim.</li>
                       <li><b>[2025.10]</b> </li>                        
-                      <li><b>[Invited Talk]</b> "Two Challenges in AI Accelerators", <b>Prof. Seung-Hyeon Moon</b>, hosted by HPIC Lab.</li>
-                      <li><b>[OC Member]</b> Special Session Organizing Co-Chair, IEEE/IEIE ICCE-ASIA 2025.</li>
+                      <li><b>•  [Invited Talk]</b> "Two Challenges in AI Accelerators", <b>Prof. Seung-Hyeon Moon</b>, hosted by HPIC Lab.</li>
+                      <li><b>•  [OC Member]</b> Special Session Organizing Co-Chair, IEEE/IEIE ICCE-ASIA 2025.</li>
                       <li><b>Prof. Choo</b> has been selected as a recipient of the <b>Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, 한국반도체산업협회장상</b> at the Semiconductor Day 2025. Congrat! 
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <li><b>[Award]</b> Chip Design Contest Best Poster Award, ISOCC 2025, Congratulations, <b>Jae-Hyeon.</b></li>
-                      <li><b>[Award]</b> SSCS Seoul Chapter Best Paper Award, ISOCC 2025, Congratulations, <b>Seung-Hwan.</b></li>
-                      <li><b>[Award]</b> Chip Design Contest Special Prize, ISOCC 2025, Congratulations, <b>Dong-Hoe</b> and <b>Seung-Hwan.</b></li>
-                      <li><b>[Award]</b> SSCS Seoul Chapter Best Paper Award, ISOCC 2025, Congratulations, <b>Seung-Mo</b> and <b>Dong-Ho.</b></li>
-                      <li><b>[OC Member]</b> Organizing Committee, 2025 APCCAS, <b>Min-Seong</b>.</li>
-                      <li><b>[OC Member]</b> Organizing Committee, 2025 ISOCC, <b>Min-Seong</b>.</li>
+                      <li><b>•  [Award]</b> Chip Design Contest Best Poster Award, ISOCC 2025, Congratulations, <b>Jae-Hyeon.</b></li>
+                      <li><b>•  [Award]</b> SSCS Seoul Chapter Best Paper Award, ISOCC 2025, Congratulations, <b>Seung-Hwan.</b></li>
+                      <li><b>•  [Award]</b> Chip Design Contest Special Prize, ISOCC 2025, Congratulations, <b>Dong-Hoe</b> and <b>Seung-Hwan.</b></li>
+                      <li><b>•  [Award]</b> SSCS Seoul Chapter Best Paper Award, ISOCC 2025, Congratulations, <b>Seung-Mo</b> and <b>Dong-Ho.</b></li>
+                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 APCCAS, <b>Min-Seong</b>.</li>
+                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 ISOCC, <b>Min-Seong</b>.</li>
                       <li><b>[2025.9]</b> </li>                        
-                      <li><b>[Award]</b> 기업특별상 (바움디자인시스템즈), 제26회 대한민국 반도체설계대전, Congratulations, <b>Dong-Hyun.</b>
+                      <li><b>•  [Award]</b> 기업특별상 (바움디자인시스템즈), 제26회 대한민국 반도체설계대전, Congratulations, <b>Dong-Hyun.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                  
-                      <li><b>[Award]</b> 특허청장상, 제26회 대한민국 반도체설계대전, Congratulations, <b>Seung-Mo</b> and <b>Dong-Ho.</b>
+                      <li><b>•  [Award]</b> 특허청장상, 제26회 대한민국 반도체설계대전, Congratulations, <b>Seung-Mo</b> and <b>Dong-Ho.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter</li>
                       <li><b>Jae-Geon Lee</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Receiver</li>
                       <li><b>[2025.8]</b> </li>
-                      <li><b>[Conference]</b> Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
-                      <li><b>[Conference]</b>Our research on <b>A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
+                      <li><b>•  [Conference]</b> Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
+                      <li><b>•  [Conference]</b>Our research on <b>A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
                       <li><b>Prof. Choo</b> has presented the invited talk <b>"고속 집적회로 설계"</b> at 2025년도 SoC 워크샵 및 산학교류회</li>
-                      <li><b>Prof. Choo</b> has served as the Program Committee at 2025년도 SoC 워크샵 및 산학교류회</li>
+                      <li><b>•  [OC Member]</b> Organizing Committee, 2025년도 SoC 워크샵 및 산학교류회, <b>Min-Seong</b>.</li>
                       <li><b>[2025.7]</b> </li>                      
-                      <li><b>[OC Member]</b> Organizing Committee, 2025 ITC-CSCC, <b>Min-Seong</b>.</li>
-                      <li><b>[OC Member]</b> Organizing Committee, 2025년 상용반도체개발 기술워크숍, <b>Min-Seong</b>.</li>
+                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 ITC-CSCC, <b>Min-Seong</b>.</li>
+                      <li><b>•  [OC Member]</b> Organizing Committee, 2025년 상용반도체개발 기술워크숍, <b>Min-Seong</b>.</li>
                       <li><b>[2025.6]</b> </li>
-                      <li><b>[Journal]</b>Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>Journal of Solid-State Circuits (JSSC)</b></u>!
+                      <li><b>•  [Journal]</b>Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>Journal of Solid-State Circuits (JSSC)</b></u>!
                           <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging</b> project, sponsored by the Ministry of Science and ICT (MSIT).</li>
                       <li><b>[2025.5]</b> </li>
