--- a/index.html
+++ b/index.html
@@ -338,20 +338,20 @@
                       <li><b>•  [OC Member]</b> Organizing Committee, 2025 ITC-CSCC, <b>Min-Seong</b>.</li>
                       <li><b>•  [OC Member]</b> Organizing Committee, 2025년 상용반도체개발 기술워크숍, <b>Min-Seong</b>.</li>
                       <li><b>[2025.6]</b> </li>
-                      <li><b>•  [Journal]</b>Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>Journal of Solid-State Circuits (JSSC)</b></u>!
+                      <li><b>•  [Journal]</b> Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>Journal of Solid-State Circuits (JSSC)</b></u>!
                           <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging</b> project, sponsored by the Ministry of Science and ICT (MSIT).</li>
                       <li><b>[2025.5]</b> </li>
                       <li><b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>극저온 초전도 양자컴퓨터 판독 수신기</b> project, sponsored by Samsung Electronic.</li>         
-                      <li>Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <u><b>Transactions on Very Large Scale Integration (TVLSI)</b></u>!
+                      <li><b>•  [Journal]</b> Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <u><b>Transactions on Very Large Scale Integration (TVLSI)</b></u>!
                           <a href="https://ieeexplore.ieee.org/document/11017684" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>Prof. Choo</b> has presented the invited talk <b>"고속 유선통신의 기초"</b> at 2025 아날로그/파워 IC 설계 워크숍</li>
-                      <li><b>Prof. Choo</b> has served as the Program Committee at 2025 아날로그/파워 IC 설계 워크숍</li>
-                      <li><b>Prof. Choo</b> has served as the Program Committee at 2025 SoC 학술대회</li>
+                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 아날로그/파워 IC 설계 워크숍, <b>Min-Seong</b>.</li>
+                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 SoC 학술대회, <b>Min-Seong</b>.</li>
                       <li><b>[2025.1]</b> </li>
-                      <li><b>Sang-Hyeon Ok</b> has been awarded <b>2025 ICEIC Best Paper Award (Silver Prize)</b> Congrat!</li>
+                      <li><b>•  [Award]</b> Best Paper Award (Silver Prize), 2025 ICEIC ,Congratulations, <b>Sang-Hyeon.</b></li>
                       <li><b>Prof. Choo</b> has presented the invited talk <b>"The Future of High-Speed Wireline: Innovations in DSP-Based Transceiver Design"</b> at ICEIC 2025</li>
-                      <li><b>Prof. Choo</b> has served as the Organizing Committee and Session Chair at 2025 ICEIC</li>
+                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 ICEIC, <b>Min-Seong</b>.
                       <li><b>Prof. Choo</b> has served as the 상임이사 (차세대 리더 분과) at 대한전자공학회</li>
                     </ul>
                   </div>
