--- a/index.html
+++ b/index.html
@@ -326,12 +326,14 @@
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                  
                       <li><b>•  [Award]</b> 특허청장상, 제26회 대한민국 반도체설계대전, Congratulations, <b>Seung-Mo</b> and <b>Dong-Ho.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <li><b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter</li>
-                      <li><b>Jae-Geon Lee</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Receiver</li>
+                      <!--<li><b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter</li>-->
+                      <!--<li><b>Jae-Geon Lee</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Receiver</li>-->
+                      <li><b>•  [Research Project]</b> <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter, <b>Seung-Mo.</b></li>
+                      <li><b>•  [Research Project]</b> <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter, <b>Jae-Geon.</b></li>
                       <li><b>[2025.8]</b> </li>
                       <li><b>•  [Conference]</b> Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
                       <li><b>•  [Conference]</b>Our research on <b>A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
-                      <li><b>Prof. Choo</b> has presented the invited talk <b>"고속 집적회로 설계"</b> at 2025년도 SoC 워크샵 및 산학교류회</li>
+                      <li><b>•  [Invited Talk]</b> "고속 집적회로 설계", 2025년도 SoC 워크샵 및 산학교류회, <b>Min-Seong</b>.</li>
                       <li><b>•  [OC Member]</b> Organizing Committee, 2025년도 SoC 워크샵 및 산학교류회, <b>Min-Seong</b>.</li>
                       <li><b>[2025.7]</b> </li>                      
                       <li><b>•  [OC Member]</b> Organizing Committee, 2025 ITC-CSCC, <b>Min-Seong</b>.</li>
@@ -339,9 +341,11 @@
                       <li><b>[2025.6]</b> </li>
                       <li><b>•  [Journal]</b> Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>Journal of Solid-State Circuits (JSSC)</b></u>!
                           <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <li><b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging</b> project, sponsored by the Ministry of Science and ICT (MSIT).</li>
+                      <!--<li><b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging</b> project, sponsored by the Ministry of Science and ICT (MSIT).</li> -->
+                      <li><b>•  [Research Project]</b> "Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging" project, sponsored by the Ministry of Science and ICT (MSIT), <b>HPIC lab.</b></li>
                       <li><b>[2025.5]</b> </li>
-                      <li><b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>극저온 초전도 양자컴퓨터 판독 수신기</b> project, sponsored by Samsung Electronic.</li>         
+                      <li><b>•  [Research Project]</b> "극저온 초전도 양자컴퓨터 판독 수신기" project, sponsored by Samsung Electronic, <b>HPIC lab.</b></li>         
+                      <!--<li><b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>극저온 초전도 양자컴퓨터 판독 수신기</b> project, sponsored by Samsung Electronic.</li>-->
                       <li><b>•  [Journal]</b> Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <u><b>Transactions on Very Large Scale Integration (TVLSI)</b></u>!
                           <a href="https://ieeexplore.ieee.org/document/11017684" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>•  [Invited Talk]</b> "고속 유선통신의 기초", 2025 아날로그/파워 IC 설계 워크숍, <b>Min-Seong</b>.</li>
