--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                       <li><b>[2025.10]</b> </li>                        
                       <li><b>•  [Invited Talk]</b> "Two Challenges in AI Accelerators", <b>Prof. Seung-Hyeon Moon</b>, hosted by HPIC Lab.</li>
                       <li><b>•  [OC Member]</b> Special Session Organizing Co-Chair, IEEE/IEIE ICCE-ASIA 2025.</li>
-                      <li><b>Prof. Choo</b> has been selected as a recipient of the <b>Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, 한국반도체산업협회장상</b> at the Semiconductor Day 2025. Congrat! 
+                      <li><b>•  [Award]</b> 한국반도체산업협회장상, Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, the Semiconductor Day 2025, <b>Min-Seong.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>•  [Award]</b> Chip Design Contest Best Poster Award, ISOCC 2025, Congratulations, <b>Jae-Hyeon.</b></li>
                       <li><b>•  [Award]</b> SSCS Seoul Chapter Best Paper Award, ISOCC 2025, Congratulations, <b>Seung-Hwan.</b></li>
