--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <!--<li><b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter</li>-->
                       <!--<li><b>Jae-Geon Lee</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Receiver</li>-->
-                      <li><b>•  [Research Project]</b> <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter, <b>Seung-Mo.</b></li>
-                      <li><b>•  [Research Project]</b> <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter, <b>Jae-Geon.</b></li>
+                      <li><b>•  [Research Project]</b> "석사과정생 연구장려금" from NRF for Development of High-Speed DSP-based Transmitter, <b>Seung-Mo.</b></li>
+                      <li><b>•  [Research Project]</b> "석사과정생 연구장려금" from NRF for Development of High-Speed DSP-based Transmitter, <b>Jae-Geon.</b></li>
                       <li><b>[2025.8]</b> </li>
                       <li><b>•  [Conference]</b> Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
                       <li><b>•  [Conference]</b>Our research on <b>A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
