--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                   <div class="user-card news-card">
                    <ul>
                       <li><b>[2025.12]</b> </li>
-                      <li><b>•  [Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Jae-Geon.</b></li>                    
+                      <li><b>•  [Award]</b> Jae-Geon Lee received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</li>                    
                       <li><b>•  [Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Dong-Ho.</b> </li>                    
                       <li><b>•  [Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Seung-Hwan.</b> </li>                    
                       <li><b>•  [Award]</b> 공로상, 대한전자공학회 반도체소사이어티</b>, Congratulations, <b>Min-Seong.</b></li>
