--- a/index.html
+++ b/index.html
@@ -301,9 +301,10 @@
                    <ul>
                       <li><b>[2025.12]</b> </li>
                       <li><b>•  [Award]</b> Jae-Geon Lee received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</li>                    
-                      <li><b>•  [Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Dong-Ho.</b> </li>                    
-                      <li><b>•  [Award]</b> Best Student Paper (Bronze Award), IEEE Seoul Section, Congratulations, <b>Seung-Hwan.</b> </li>                    
-                      <li><b>•  [Award]</b> 공로상, 대한전자공학회 반도체소사이어티</b>, Congratulations, <b>Min-Seong.</b></li>
+                      <li><b>•  [Award]</b> Dong-Ho Kim received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</b> </li>                    
+                      <li><b>•  [Award]</b> Seung-Hwan Gong received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</b> </li>                    
+                      <li><b>•  [Award]</b> Min-Seong Choo received the Achievement Award from the IEIE Semiconductor Society.</b></li>
+                      <li><b>•  [Award]</b> Min-Seong received the Achievement Award from the Institute of Electronics and Information Engineers (IEIE).</b></li>
                       <li><b>[2025.11]</b> </li>                      
                       <li><b>•  [Award]</b> 공로상, 대한전자공학회</b>, Congratulations, <b>Min-Seong</b>.</li>
                       <li><b>•  [OC Member]</b> 조직위원, 대한전자공학회 2024년도 추계학술대회, <b>Min-Seong</b>.</li>
