--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
                       <li><b>•  [Award]</b> Jae-Geon received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</li>                    
                       <li><b>•  [Award]</b> Dong-Ho received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</b> </li>                    
                       <li><b>•  [Award]</b> Seung-Hwan received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</b> </li>                    
-                      <li><b>•  [Award]</b> Min-Seong received the Achievement Award from the IEIE Semiconductor Society.</b></li>
-                      <li><b>•  [Award]</b> Min-Seong received the Achievement Award from the Institute of Electronics and Information Engineers (IEIE).</b></li>
+                      <li><b>•  [Award]</b> Min-Seong received the Achievement Award (공로상) from the IEIE (대한전자공학회) Semiconductor Society.</b></li>
+                      <li><b>•  [Award]</b> Min-Seong received the Achievement Award (공로상) from the IEIE (대한전자공학회).</b></li>
                       <li><b>[2025.11]</b> </li>                      
                       <li><b>•  [Service]</b> Min-Seong served as an Organizing Committee Member for the 2024 IEIE Fall Conference.</li>
                       <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "High-Speed Interface Circuit Design" at the University of Seoul.</li>
