--- a/index.html
+++ b/index.html
@@ -305,22 +305,22 @@
                       <li><b>•  [Award]</b> Seung-Hwan received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</b> </li>                    
                       <li><b>•  [Award]</b> Min-Seong received the Achievement Award (공로상) from the IEIE (대한전자공학회) Semiconductor Society.</b></li>
                       <li><b>•  [Award]</b> Min-Seong received the Achievement Award (공로상) from the IEIE (대한전자공학회).</b></li>
-                      <li><b>[2025.11]</b> </li>                      
+                      <li>[2025.11] </li>                      
                       <li><b>•  [Service]</b> Min-Seong served as an Organizing Committee Member for the 2024 IEIE Fall Conference.</li>
                       <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "High-Speed Interface Circuit Design" at the University of Seoul.</li>
                       <li><b>•  [Invited Talk]</b> Seung-Hwan, Jae-Geon, Seung-Mo, Dong-Ho, and Min-Seong presented an invited talk entitled "Analog Modeling" at LX Semicon.</b></li>
-                      <li><b>•  [Invited Talk]</b> "DSP-based Wireline Communication", Korea University, hosted by Prof. Chulwoo Kim.</li>
-                      <li><b>[2025.10]</b> </li>                        
-                      <li><b>•  [Invited Talk]</b> "Two Challenges in AI Accelerators", <b>Prof. Seung-Hyeon Moon</b>, hosted by HPIC Lab.</li>
-                      <li><b>•  [OC Member]</b> Special Session Organizing Co-Chair, IEEE/IEIE ICCE-ASIA 2025.</li>
-                      <li><b>•  [Award]</b> 한국반도체산업협회장상, Korea Semiconductor Industry Association (KSIA) Award for Contribution to Semiconductor Industry Development, the Semiconductor Day 2025, <b>Min-Seong.</b>
+                      <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "DSP-based Wireline Communication" at Korea University (hosted by Prof. Chulwoo Kim).</li>
+                      <li>[2025.10] </li>                        
+                      <li><b>•  [Invited Talk]</b> Prof. Seung-Hyeon Moon presented an invited talk entitled "Two Challenges in AI Accelerators," hosted by HPIC Lab.</li>
+                      <li><b>•  [OC Member]</b> Min-Seong served as the Special Session Organizing Co-Chair for IEEE/IEIE ICCE-ASIA 2025.</li>
+                      <li><b>•  [Award]</b> Min-Seong received the KSIA Award for Contribution to Semiconductor Industry Development (한국반도체산업협회장상) at the 18th Semiconductor Day.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <li><b>•  [Award]</b> Chip Design Contest Best Poster Award, ISOCC 2025, Congratulations, <b>Jae-Hyeon.</b></li>
-                      <li><b>•  [Award]</b> SSCS Seoul Chapter Best Paper Award, ISOCC 2025, Congratulations, <b>Seung-Hwan.</b></li>
-                      <li><b>•  [Award]</b> Chip Design Contest Special Prize, ISOCC 2025, Congratulations, <b>Dong-Hoe</b> and <b>Seung-Hwan.</b></li>
-                      <li><b>•  [Award]</b> SSCS Seoul Chapter Best Paper Award, ISOCC 2025, Congratulations, <b>Seung-Mo</b> and <b>Dong-Ho.</b></li>
-                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 APCCAS, <b>Min-Seong</b>.</li>
-                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 ISOCC, <b>Min-Seong</b>.</li>
+                      <li><b>•  [Award]</b> Jae-Hyeon Pyeon received the Best Poster Award at the ISOCC 2025 Chip Design Contest.</li>
+                      <li><b>•  [Award]</b> Seung-Hwan Gong received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
+                      <li><b>•  [Award]</b> Dong-Hoe Heo and Seung-Hwan Gong received the Special Prize at the ISOCC 2025 Chip Design Contest.</li>
+                      <li><b>•  [Award]</b> Seung-Mo Jin and Dong-Ho Kim received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
+                      <li><b>•  [Service]</b> Prof. Choo served on the Organizing Committee Member for APCCAS 2025.</li>
+                      <li><b>•  [Service]</b> Prof. Choo served on the Organizing Committee Member for ISOCC 2025.</li>
                       <li><b>[2025.9]</b> </li>                        
                       <li><b>•  [Award]</b> 기업특별상 (바움디자인시스템즈), 제26회 대한민국 반도체설계대전, Congratulations, <b>Dong-Hyun.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                  
