--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                       <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "DSP-based Wireline Communication" at Korea University (hosted by Prof. Chulwoo Kim).</li>
                       <li>[2025.10] </li>                        
                       <li><b>•  [Invited Talk]</b> Prof. Seung-Hyeon Moon presented an invited talk entitled "Two Challenges in AI Accelerators," hosted by HPIC Lab.</li>
-                      <li><b>•  [OC Member]</b> Min-Seong served as the Special Session Organizing Co-Chair for IEEE/IEIE ICCE-ASIA 2025.</li>
+                      <li><b>•  [Service]</b> Min-Seong served as the Special Session Organizing Co-Chair for IEEE/IEIE ICCE-ASIA 2025.</li>
                       <li><b>•  [Award]</b> Min-Seong received the KSIA Award for Contribution to Semiconductor Industry Development (한국반도체산업협회장상) at the 18th Semiconductor Day.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>•  [Award]</b> Jae-Hyeon Pyeon received the Best Poster Award at the ISOCC 2025 Chip Design Contest.</li>
