--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,8 @@
       tabindex="-1"
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
-    >
+
+    >  <!-- 상세 프로필 크기 조절 방법: 아래 modal-dialog modal-dialog-centered modal-xl 코드에서 xl(XLarge)을 lg(Large)로 바꾸면 이전 크기로 줄어듦  -->
       <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
           <div class="modal-header">
