--- a/index.html
+++ b/index.html
@@ -322,14 +322,14 @@
                       <li><b>•  [Service]</b> Prof. Choo served on the Organizing Committee Member for APCCAS 2025.</li>
                       <li><b>•  [Service]</b> Prof. Choo served on the Organizing Committee Member for ISOCC 2025.</li>
                       <li><b>[2025.9]</b> </li>                        
-                      <li><b>•  [Award]</b> 기업특별상 (바움디자인시스템즈), 제26회 대한민국 반도체설계대전, Congratulations, <b>Dong-Hyun.</b>
+                      <li><b>•  [Award]</b> Dong-Hyun Lee and Shin-Uk Kang received the Corporate Special Award (Baum Design Systems) at the 26th Korean Semiconductor Design Challenge.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                  
-                      <li><b>•  [Award]</b> 특허청장상, 제26회 대한민국 반도체설계대전, Congratulations, <b>Seung-Mo</b> and <b>Dong-Ho.</b>
+                      <li><b>•  [Award]</b> Seung-Mo Jin and Dong-Ho Kim received the Commissioner of the Korean Intellectual Property Office Award (특허청장상) at the 26th Korean Semiconductor Design Challenge.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <!--<li><b>Seung-Mo Jin</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Transmitter</li>-->
                       <!--<li><b>Jae-Geon Lee</b> has been selected as a recipient of the <b>석사과정생 연구장려금</b> from NRF for Development of High-Speed DSP-based Receiver</li>-->
-                      <li><b>•  [Research Project]</b> "석사과정생 연구장려금" from NRF for Development of High-Speed DSP-based Transmitter, <b>Seung-Mo.</b></li>
-                      <li><b>•  [Research Project]</b> "석사과정생 연구장려금" from NRF for Development of High-Speed DSP-based Transmitter, <b>Jae-Geon.</b></li>
+                      <li><b>•  [Grant]</b> "Seung-Mo Jin was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea</b></li>
+                      <li><b>•  [Grant]</b> ae-Geon Lee was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea (NRF).</b></li>
                       <li><b>[2025.8]</b> </li>
                       <li><b>•  [Conference]</b> Our research on <b>Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
                       <li><b>•  [Conference]</b>Our research on <b>A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization</b> has been accepted for presentation at <u><b>2025 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 2-5, 2025, in Daejeon, South Korea!</li>
