--- a/index.html
+++ b/index.html
@@ -398,8 +398,12 @@
                 <div class="wrapper">
                   <div class="user-card news-card">
                     <ul>
-                      <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> have been awarded <b>IEEE CAS Student Design Contest award!</b></li>
-                      <li>[Otc.] <b>Prof. Choo</b> has served as the Technical Program Committee (TPC) at 2023 ISOCC</li>
+                      <li>[2023.12]</b> </li>
+                      <li><b>•  [Award]</b> <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> have been awarded <b>IEEE CAS Student Design Contest award</b></li>
+<!--                   <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> have been awarded <b>IEEE CAS Student Design Contest award!</b></li> -->
+                      <li>[2023.11]</b> </li>
+                      <li><b>•  [OC Member]</b> <b>Prof. Choo</b> has served as the Technical Program Committee (TPC) at 2023 ISOCC</li>
+<!--               <li>[Otc.] <b>Prof. Choo</b> has served as the Technical Program Committee (TPC) at 2023 ISOCC</li> -->
                     </ul>
                   </div>
                 </div>
@@ -412,7 +416,9 @@
                 <div class="wrapper">
                   <div class="user-card news-card">
                       <ul>
-                        <li>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</li>
+                        <li>[2022.03]</b> </li>
+                        <li><b>•  [Appointment]</b> <b>Prof. Choo</b> has been appointed Hanyang University.</li>
+<!--                    <li>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</li> -->
                       </ul>
                   </div>
                 </div>
