--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
                       <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "High-Speed Integrated Circuit Design" at the 2025 SoC Workshop.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 SoC Workshop.</li>
                       <li><b>[2025.7]</b> </li>                      
-                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 ITC-CSCC, <b>Min-Seong</b>.</li>
-                      <li><b>•  [OC Member]</b> Organizing Committee, 2025년 상용반도체개발 기술워크숍, <b>Min-Seong</b>.</li>
+                      <li><b>•  [Service]</b> Min-Seong served as a Session Chair and on the Organizing Committee for ITC-CSCC 2025.</li>
+                      <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 Commercial Semiconductor Development Technology Workshop (상용반도체개발 기술워크숍).</li>
                       <li><b>[2025.6]</b> </li>
                       <li><b>•  [Journal]</b> Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>Journal of Solid-State Circuits (JSSC)</b></u>!
                           <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
