--- a/index.html
+++ b/index.html
@@ -333,22 +333,20 @@
                       <li><b>•  [Publication-Conference]</b> A paper entitled "A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization" has been accepted for presentation at the 2025 IEEE Asian Solid-State Circuits Conference (A-SSCC).</li>
                       <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "High-Speed Integrated Circuit Design" at the 2025 SoC Workshop.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 SoC Workshop.</li>
-                      <li><b>[2025.7]</b> </li>                      
+                      <li>[2025.7] </li>                      
                       <li><b>•  [Service]</b> Min-Seong served as a Session Chair and on the Organizing Committee for ITC-CSCC 2025.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 Commercial Semiconductor Development Technology Workshop (상용반도체개발 기술워크숍).</li>
-                      <li><b>[2025.6]</b> </li>
-                      <li><b>•  [Journal]</b> Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology</b> has been accepted for publication at <u><b>Journal of Solid-State Circuits (JSSC)</b></u>!
+                      <li>[2025.6] </li>
+                      <li><b>•  [Publication-Journal]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology" has been accepted for publication in the IEEE Journal of Solid-State Circuits (JSSC).</b></u>!
                           <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <!--<li><b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging</b> project, sponsored by the Ministry of Science and ICT (MSIT).</li> -->
-                      <li><b>•  [Research Project]</b> "Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging" project, sponsored by the Ministry of Science and ICT (MSIT), <b>HPIC lab.</b></li>
-                      <li><b>[2025.5]</b> </li>
-                      <li><b>•  [Research Project]</b> "극저온 초전도 양자컴퓨터 판독 수신기" project, sponsored by Samsung Electronic, <b>HPIC lab.</b></li>         
-                      <!--<li><b>Prof. Choo</b> and HPIC lab. have been selected to paricipate in the <b>극저온 초전도 양자컴퓨터 판독 수신기</b> project, sponsored by Samsung Electronic.</li>-->
-                      <li><b>•  [Journal]</b> Our research on <b>A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL</b> has been accepted for publication at <u><b>Transactions on Very Large Scale Integration (TVLSI)</b></u>!
+                      <li><b>•  [Grant]</b> HPIC Lab were selected for the "Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging" project, sponsored by the Ministry of Science and ICT (MSIT).</b></li>
+                      <li>[2025.5] </li>
+                      <li><b>•  [Grant]</b> HPIC Lab were selected for the "Cryogenic Superconducting Quantum Computer Readout Receiver" project, sponsored by Samsung Electronics.</b></li>         
+                      <li><b>•  [Publication-Journal]</b> A paper entitled "A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL" has been accepted for publication in IEEE Transactions on Very Large Scale Integration (TVLSI) Systems.</b></u>
                           <a href="https://ieeexplore.ieee.org/document/11017684" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <li><b>•  [Invited Talk]</b> "고속 유선통신의 기초", 2025 아날로그/파워 IC 설계 워크숍, <b>Min-Seong</b>.</li>
-                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 아날로그/파워 IC 설계 워크숍, <b>Min-Seong</b>.</li>
-                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 SoC 학술대회, <b>Min-Seong</b>.</li>
+                      <li><b>•  [Invited Talk]</b> Prof. Choo presented an invited talk entitled "Basics of High-Speed Wireline Communication" at the 2025 Analog/Power IC Design Workshop.</li>
+                      <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 Analog/Power IC Design Workshop.</li>
+                      <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 SoC Conference.</li>
                       <li><b>[2025.1]</b> </li>
                       <li><b>•  [Award]</b> Best Paper Award (Silver Prize), 2025 ICEIC ,Congratulations, <b>Sang-Hyeon.</b></li>
                       <li><b>•  [Invited Talk]</b> "The Future of High-Speed Wireline: Innovations in DSP-Based Transceiver Design", ICEIC 2025, <b>Min-Seong</b>.</li>
